# rivz_plugin

rviz_plugin/rviz_plugin/src/: point_publish_tool.cpp  polygons_tool.cpp
rviz_plugin/rviz_tool_plugin_point_publish/: CMakeLists.txt  package.xml
rviz_plugin/rviz_tool_plugin_point_publish/src/: point_publish_tool.cpp
rviz_plugin/rviz_tool_plugin_polygons/: CMakeLists.txt  package.xml
rviz_plugin/src/: point_publish_tool.cpp
